# gf-canonical-transforms

./: README.md  gf-canonical-transforms.cabal  gf-conflate-params.hs
lib/: ConflateParams.hs  M1.hs  RenameGrammar.hs  TQ.hs  UnqualifyGrammar.hs  Utils.hs  WriteGrammar.hs
